<resources>
    <string name="app_name"></string>
    <string name="titulo">Formulario</string>
    <string name="app_textobtn">Siguiente</string>
    <string name="nombre">Nombre</string>
    <string name="fechanac">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descrp">Descripción</string>
    <string name="moatrartitu">Datos ingresados</string>
    <string name="app_btnok">Ok</string>
</resources>